# adjutant-mfa

./: .gitignore  README.rst  tox.ini
adjutant-plugin/: README.rst  manage.py  setup.py  test_requirements.txt  tox.ini
adjutant-plugin/mfa_actions/: models.py  serializers.py  tests.py  utils.py
adjutant-plugin/mfa_views/: models.py  tests.py  views.py
horizon-plugin/: MANIFEST.in  README.rst  setup.cfg  setup.py
horizon-plugin/adjutant_mfa_ui/: overrides.py
horizon-plugin/adjutant_mfa_ui/api/: adjutant.py
horizon-plugin/adjutant_mfa_ui/enabled/: _6160_mfa.py
horizon-plugin/adjutant_mfa_ui/mfa/: forms.py  panel.py  urls.py  views.py
horizon-plugin/adjutant_mfa_ui/mfa/templates/mfa/: _add.html  _remove.html  add.html  error.html  openrc_v3_mfa.sh.template  remove.html
horizon-plugin/adjutant_mfa_ui/static/dashboard/settings/adjutant-ui/mfa/: add.js  login.js
horizon-plugin/adjutant_mfa_ui/templates/auth/: _login_page.html
keystone-plugin/: README.rst  setup.py
keystone-plugin/keystone/auth/plugins/: password_totp.py
keystone-plugin/keystone/tests/unit/: test_v3_auth.py
keystone-plugin/keystone/token/: controllers.py
keystone-plugin/keystone_mfa/: utils.py
keystone-plugin/keystone_mfa/mitaka/: password_totp.py
keystone-plugin/keystone_mfa/newton/: password_totp.py
keystone-plugin/keystone_mfa/ocata/: password_totp.py
keystone-plugin/keystone_mfa/pike/: password_totp.py
keystone-plugin/keystone_mfa/queens/: password_totp.py
keystone-plugin/keystone_mfa/rocky/: password_totp.py
