[metadata]
name = adjutant-mfa-ui
summary = Adjutant MFA User Interface
description-file =
    README.rst
author = Amelia Cordwell
author-email = ameliacordwell@catalyst.net.nz
home-page = https://github.com/catalyst/adjutant-mfa
classifier =
    Environment :: OpenStack
    Framework :: Django
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    adjutant_mfa_ui

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
